--- a/js/index.html
+++ b/js/index.html
@@ -3,22 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamentos JS</title>
-    <!--
-    <script>
-        alert('Hola desde la pagina')
-    </script>
--->
+    <title>Fundamentos JS - Poke API -</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
 </head>
 <body>
-    <h1>Fundamentos con JS</h1>
-    <button onclick="saludar()">Mensaje</button>
+    <div class="container my-5">
+        <section
+          class="d-flex align-items-center"
+          id="loading"
+        >
+         <strong>Loading...</strong>
+         <div 
+           class="spinner-border ms-auto"
+           role="status"
+           aria-hidden="true"
+        >
+        </div>
+        </section>
 
-    <script>
-        function saludar() {
-            alert('Hola a todos')
-        }
-    </script>
+        <div class="row"id="card-poke">
+          <template id="template-card">
+            <article class="col-md-6 col-lg-3 mb-3">
+              <div class="card text-center shadow">
+                <img src="" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title text-primary lead">
+                    Personaje
+                  </h5>
+                  <p class="lead text-secondary">
+                    Tipo
+                  </p>
+                </div>
+              </div>
+            </article>
+            </template>
+        </div>
+    </div> 
     
+  <script src="./js/index.js"></script>
 </body>
 </html>
